tests/cases/standard-library/ok/diag/std-diag-write-note.ari
// Covers std::diag stderr summary output when a diagnostic carries a note.
fn main() -> i64 {
  let diagnostic = diag::error(
    "E0002",
    "expected identifier"
  ).with_note("names must appear after let");

  if diagnostic.write() {
    return 9;
  }
  return 1;
}
