tests/cases/standard-library/errors/format/format-named-capture-field.ari
struct Point {
  x: i64,
}

fn main() -> i64 {
  let point = Point { x: 4 };
  println!("{point.x}");
  return 0;
}
